--- a/moovsmart/src/index.html
+++ b/moovsmart/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB4-whc01VzkZ00QmNPUL9uPRVGOyLY2g"
+          type="text/javascript"></script>
 </head>
 <body>
 <app-root></app-root>
