--- a/moovsmart/src/index.html
+++ b/moovsmart/src/index.html
@@ -8,6 +8,7 @@
   <link href="favicon.ico" rel="icon" type="image/x-icon">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB4-whc01VzkZ00QmNPUL9uPRVGOyLY2g"
           type="text/javascript"></script>
+  <script src="https://kit.fontawesome.com/caa616da0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <app-root></app-root>
