--- a/moovsmart/src/index.html
+++ b/moovsmart/src/index.html
@@ -6,11 +6,11 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB4-whc01VzkZ00QmNPUL9uPRVGOyLY2g"
-          type="text/javascript"></script>
+  <script src="" type="text/javascript"></script>
   <script src="https://kit.fontawesome.com/caa616da0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<p>dsa</p>
 <app-root></app-root>
 </body>
 </html>
